--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.7.1",
     "@types/passport-jwt": "^3.0.7",
+    "argon2": "^0.30.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "helmet": "^6.0.1",
